# parallel_crawler

./: CMakeLists.txt  README.md  SetList.cpp  SetList.h  coarse_set.cpp  coarse_set.h  main.cpp  queue.cpp  queue.h  scraper.cpp  scraper.h  visualisations.ipynb
